Reacomodando carpetas, archivos y rutas

--- a/Inicio de sesion/login.html
+++ b/Inicio de sesion/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar sesión</title>
     <link rel="stylesheet" href="CSS/estilos_login.css">
-    <link rel="stylesheet" href="../main-page-actualizado/CSS/normalize.css">
+    <link rel="stylesheet" href="../Pagina principal/CSS/normalize.css">
 
     <script src="https://kit.fontawesome.com/f8571caff0.js" crossorigin="anonymous"></script>
 </head>
@@ -35,8 +35,6 @@
 
             <a href="#" rel="noopener noreferrer" class="login-container__help" id="btnAyuda">¿Necesita ayuda?</a>
         </form>
-
-        <img src="SRC/IMG/3094352.jpg" alt="">
     </section>
 
 
