Modificando la pagina principal

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <form class="form" method="post" action="php/php_login/login-query.php">
-        <h2 class="form__h2">Registro de documentos</h2>
+        <h2 class="form__h2">Historial de archivos notariales (H.A.N)</h2>
 
         <p class="form__p">Ingrese sus datos</p>
 
